--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 			<li><a href="about.html">ABOUT</a></li>
 			<li><a href="picture.html">PICTURES</a></li>
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>		
-			<li class="bdr"><a class="pdg" href="contact.html">FORUM</a></li>					
+			<li class="bdr"><a class="pdg" href="contact.html">FORUM</a></li>
+			<li class="bdr"><a class="pdg" href="contact.html">Binit</a></li>			
 		</ul>
 	</div>
 <!--==============================Navigatin Ends=============================-->
